test/fixtures/parse_errors/noGetters.ion
obj = { get foo () { 1 } }